# engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  helper.sh  nextest.config.toml  rustfmt.toml
.github/workflows/: charts.yaml  functionnal_tests.yml  functionnal_tests_dev.yml  main_release.yml  security-audit.yml  tests.yml
digitalocean/bootstrap/: backend.j2.tf  helm-prometheus-operator.j2.tf  oks-master-cluster.j2.tf
digitalocean/bootstrap/chart_values/: nginx-ingress.yaml  prometheus_operator.yaml
examples/: create_simple_infrastructure_on_aws.rs  deploy_app_on_aws.rs  simple_deployment_on_aws.rs
lib/: helm-freeze.yaml  kubernetes_config_my-first-doks-2
lib/aws-ec2/bootstrap/: documentdb.tf  ec2-iam-alb-controller.tf  ec2-iam-ebs.tf  ec2-sec-group.j2.tf  ec2-sec-group.tf  ec2-vpc-common.j2.tf  ec2-vpc-flow-logs.j2.tf  ec2-vpc.j2.tf  ec2.j2.tf  ec2.tf  elasticcache.tf  elasticsearch.tf  helper.j2.sh  (+9 more)
lib/digitalocean/: doks_gen_kubectl-config.j2.tf  tf-default-vars.j2.tf  vpc-networking.j2.tf
src/: constants.rs  crypto.rs  deletion_utilities.rs  docker.rs  dynamo_db.rs  engine.rs  error.rs  features_repository.rs  fs.rs  git.rs  helm.rs  io_models.rs  kubers_utils.rs  lib.rs  log_file_writer.rs  log_utils.rs  logger.rs  metrics_registry.rs  models.rs  msg_publisher.rs  runtime.rs  s3.rs  session.rs  string.rs  template.rs  tera_utils.rs  transaction.rs  unit_conversion.rs  utilities.rs
src/build_platform/: docker.rs  dockerfile_utils.rs  error.rs  local_docker.rs  mod.rs
src/byok_chart_gen/: chart_dot_yaml.rs  io.rs  mod.rs  values_dot_yaml.rs
src/cloud_provider/: environment.rs  helm.rs  io.rs  kubeconfig_helper.rs  kubectl_utils.rs  kubernetes.rs  metrics.rs  mod.rs  models.rs  qovery.rs  service.rs  utilities.rs  vault.rs
src/cmd/: command.rs  docker.rs  doctl.rs  git.rs  git_lfs.rs  helm.rs  helm_utils.rs  kubectl.rs  kubectl_utils.rs  kubent.rs  mod.rs  skopeo.rs  structs.rs  terraform.rs  utilities.rs
src/container_registry/: README.md  aws_ecr.rs  digitalocean_container_registry.rs  docker.rs  docker_hub.rs  docr.rs  ecr.rs  errors.rs  generic_cr.rs  github_cr.rs  google_artifact_registry.rs  mod.rs  scaleway_container_registry.rs  scaleway_cr.rs  utilities.rs
src/deployment/: deployment_info.rs  mod.rs
src/deployment_action/: check_dns.rs  deploy_application.rs  deploy_container.rs  deploy_database.rs  deploy_environment.rs  deploy_helm.rs  deploy_helm_chart.rs  deploy_job.rs  deploy_namespace.rs  deploy_router.rs  deploy_terraform.rs  mod.rs  pause_service.rs  restart_service.rs  test_utils.rs  utils.rs
src/deployment_report/: logger.rs  mod.rs  obfuscation_service.rs  recap_reporter.rs  utils.rs
src/deployment_task/: environment_task.rs  infrastructure_task.rs
src/dns_provider/: cloudflare.rs  errors.rs  io.rs  mod.rs  qoverydns.rs
src/engine_task/: core_service_api.rs  environment_task.rs  infrastructure_task.rs  mod.rs  qovery_api.rs
src/environment/: mod.rs  task.rs
src/errors/: io.rs  mod.rs
src/events/: io.rs  mod.rs
src/infrastructure/: infrastructure_context.rs  mod.rs  task.rs
src/infrastructure_action/: delete_kube_apps.rs  deploy_helms.rs  deploy_terraform.rs  mod.rs  utils.rs
src/io_models/: annotations_group.rs  application.rs  azure.rs  container.rs  context.rs  database.rs  domain.rs  engine_location.rs  engine_request.rs  environment.rs  gke.rs  helm_chart.rs  job.rs  labels_group.rs  metrics.rs  mod.rs  models.rs  probe.rs  progress_listener.rs  router.rs  terraform_service.rs  types.rs  variable_utils.rs
src/models/: abort.rs  annotations_group.rs  application.rs  container.rs  database.rs  database_utils.rs  domain.rs  helm_chart.rs  job.rs  kubernetes.rs  labels_group.rs  mod.rs  probe.rs  registry_image_source.rs  router.rs  service_resource.rs  third_parties.rs  types.rs  utils.rs
src/object_storage/: do_space.rs  errors.rs  google_object_storage.rs  mod.rs  s3.rs  scaleway_object_storage.rs  scaleway_os.rs  spaces.rs
src/secret_manager/: vault.rs
src/services/: kube_client.rs  kubernetes_api_deprecation_service.rs  mod.rs
test_utilities/: Cargo.toml
test_utilities/src/: aws.rs  aws_ec2.rs  cloudflare.rs  common.rs  databases.rs  digitalocean.rs  dns.rs  lib.rs  scaleway.rs  tls.rs  utilities.rs
tests/: README.md  dns.rs  lib.rs
tests/assets/: do-options.json  eks-options.json
tests/aws/: aws_databases.rs  aws_databases_ec2.rs  aws_ec2_whole_enchilada_databases.rs  aws_ecr.rs  aws_environment.rs  aws_environment_ec2.rs  aws_iam_roles.rs  aws_kubernetes.rs  aws_kubernetes_ec2.rs  aws_s3.rs  aws_whole_enchilada.rs  deletion.rs  mod.rs
tests/azure/: azure_blob_storage.rs  azure_container_registry.rs  azure_environment.rs  azure_kubernetes.rs  azure_whole_enchilada.rs  mod.rs
tests/container_registries/: github_cr.rs  mod.rs
tests/digital_ocean/: container_registry.rs  databases.rs  mod.rs
tests/digitalocean/: container_registry.rs  databases.rs  do_container_registry.rs  do_databases.rs  do_environment.rs  do_kubernetes.rs  do_spaces.rs  do_utility_kubernetes_doks_test_cluster.rs  do_whole_enchilada.rs  environment.rs  kubernetes.rs  mod.rs
tests/gcp/: gcp_artifact_registry_service.rs  gcp_databases.rs  gcp_environment.rs  gcp_kubernetes.rs  gcp_object_storage_service.rs  gcp_whole_enchilada.rs  mod.rs
tests/helm/: cert_manager.rs  chart_testing.rs  mod.rs
tests/helpers/: aws.rs  aws_ec2.rs  azure.rs  common.rs  database.rs  digitalocean.rs  dns.rs  environment.rs  gcp.rs  git_server.rs  helpers_aws.rs  helpers_common.rs  helpers_digitalocean.rs  helpers_scaleway.rs  kubernetes.rs  mod.rs  on_premise.rs  scaleway.rs  utilities.rs
tests/kube/: application.rs  container.rs  database.rs  jobs.rs  mod.rs
tests/scaleway/: mod.rs  scaleway_os.rs  scw_container_registry.rs  scw_databases.rs  scw_environment.rs  scw_kubernetes.rs  scw_object_storage.rs  scw_utility_kubernetes_kapsule_test_cluster.rs  scw_utility_test_kubernetes_kapsule_cluster.rs  scw_whole_enchilada.rs
tests/unit/: mod.rs  s3.rs
(+1642 files in other folders)
