[package]
name = "test-utilities"
version = "0.1.0"
authors = ["Romaric Philogene <evoxmusic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qovery-engine = { path = "../" }
chrono = "0.4.11"
dirs = "3.0.1"
gethostname = "0.2.1"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0.57"
serde_derive = "1.0"
curl = "0.4.34"
reqwest = { version = "0.10.8", features = ["blocking"] }
tracing = "0.1"
tracing-subscriber = "0.2"
retry = "1.0.0"
time = "0.2.23"
hashicorp_vault = "2.0.1"

# Digital Ocean Deps
digitalocean = "0.1.1"
