[package]
name = "test-utilities"
version = "0.1.0"
authors = ["Romaric Philogene <evoxmusic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bstr = "0.2.16"
qovery-engine = { path = "../" }
chrono = "0.4.11"
dirs = "3.0.1"
gethostname = "0.2.1"
passwords = "3.1.7"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0.57"
serde_derive = "1.0"
curl = "0.4.34"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
tracing = "0.1"
tracing-subscriber = "0.2"
retry = "1.0.0"
time = "0.2.23"
hashicorp_vault = "2.0.1"
maplit = "1.0.2"
uuid = { version = "0.8", features = ["v4"] }
const_format = "0.2.22"
url = "2.2.2"

# Digital Ocean Deps
digitalocean = "0.1.1"

# Scaleway Deps
scaleway_api_rs = "=0.1.2"
