[package]
name = "test-utilities"
version = "0.1.0"
authors = ["Romaric Philogene <evoxmusic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bstr = "0.2.17"
qovery-engine = { path = "../" }
chrono = "0.4.19"
dirs = "4.0.0"
gethostname = "0.2.3"
passwords = "3.1.9"
rand = "0.8.5"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
curl = "0.4.43"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["json"] }
retry = "1.3.1"
time = "0.3.9"
hashicorp_vault = "2.1.0"
maplit = "1.0.2"
uuid = { version = "1.0.0", features = ["v4"] }
const_format = "0.2.23"
url = "2.2.2"
tokio = { version = "1.18.1", features = ["full"] }

# Digital Ocean Deps
digitalocean = "0.1.1"

# Scaleway Deps
scaleway_api_rs = "0.1.2"
dotenv = "0.15.0"
